force-app/main/default/objects/RMS_Notification__c/RMS_Notification__c.object-meta.xml
<CustomObject>
    <description>In-app RMS notifications without case-level sensitive details.</description>
    <label>RMS Notification</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>