force-app/main/default/objects/RMS_Notification__c/fields/Manifest__c.field-meta.xml
<CustomField>
    <fullName>Manifest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manifest</label>
    <referenceTo>RMS_Manifest__c</referenceTo>
    <relationshipLabel>RMS Notifications</relationshipLabel>
    <relationshipName>RMS_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>