force-app/main/default/objects/RMS_Notification__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification Date</label>
    <type>DateTime</type>
</CustomField>