force-app/main/default/objects/RMS_Notification__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>RMS Notifications</relationshipLabel>
    <relationshipName>RMS_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>